todo-list/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
  namespace: todolist
spec:
  ingressClassName: nginx
  rules:
  - host: todolist.beer1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 80
  - host: todo-api.beer1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
         service:
           name: api
           port:
             number: 80
